@@ -33,7 +33,6 @@ Suggests:
     simplermarkdown
 LinkingTo: Rcpp
 VignetteBuilder: simplermarkdown
-SystemRequirements: C++11
 License: GPL-3
 LazyLoad: yes
 Encoding: UTF-8
