@@ -22,6 +22,8 @@ S3method(select_n_to_m,cluster_pairs)
 S3method(select_n_to_m,pairs)
 S3method(select_threshold,cluster_pairs)
 S3method(select_threshold,pairs)
+S3method(select_unique,cluster_pairs)
+S3method(select_unique,pairs)
 S3method(summary,problink_em)
 S3method(tabulate_patterns,cluster_pairs)
 S3method(tabulate_patterns,pairs)
@@ -52,6 +54,7 @@ export(score_simple)
 export(select_greedy)
 export(select_n_to_m)
 export(select_threshold)
+export(select_unique)
 export(tabulate_patterns)
 import(Rcpp)
 import(data.table)
